--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Контакти</h1>
 
-<p>Заповніть форму, щоб «надіслати» повідомлення (форма-заглушка).</p>
+<p>Заповніть форму, щоб «надіслати» повідомлення.</p>
 
 <form class="row g-3" method="post">
     <div class="col-md-6">
@@ -20,7 +20,7 @@
                   placeholder="Текст повідомлення"></textarea>
     </div>
     <div class="col-12">
-        <button type="submit" class="btn btn-primary" disabled>Надіслати (заглушка)</button>
+        <button type="submit" class="btn btn-primary" disabled>Надіслати</button>
     </div>
 </form>
 {% endblock %}
