--- a/app/templates/partials/nav.html
+++ b/app/templates/partials/nav.html
@@ -16,6 +16,12 @@
                     <a class="nav-link {% if request.path == '/contacts' %}active{% endif %}"
                        href="{{ url_for('contacts') }}">Контакти</a>
                 </li>
+                <li class="navbar-nav">
+                    <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('users.profile') }}">Profile</a>
+                </li>
             </ul>
         </div>
     </div>
