--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
 
     <main class="container my-4">
         {% block content %}{% endblock %}
-    </main>
+    </main>ЖЖ^
 
     {% include 'partials/footer.html' %}
 
