--- a/app/templates/partials/nav.html
+++ b/app/templates/partials/nav.html
@@ -1,27 +1,54 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('resume') }}">Моє резюме</a>
+        <a class="navbar-brand" href="{{ url_for('resume') }}">
+            Моє резюме
+        </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+        <button class="navbar-toggler" type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#mainNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav ms-auto">
+
                 <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/' %}active{% endif %}"
-                       href="{{ url_for('resume') }}">Резюме</a>
+                    <a class="nav-link {% if request.endpoint == 'resume' %}active{% endif %}"
+                       href="{{ url_for('resume') }}">
+                        Резюме
+                    </a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/contacts' %}active{% endif %}"
-                       href="{{ url_for('contacts') }}">Контакти</a>
+                    <a class="nav-link {% if request.endpoint == 'contacts' %}active{% endif %}"
+                       href="{{ url_for('contacts') }}">
+                        Контакти
+                    </a>
                 </li>
-                <li class="navbar-nav">
-                    <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('users.profile') }}">Profile</a>
-                </li>
+
+                {% if session.get('user') %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'users.profile' %}active{% endif %}"
+                           href="{{ url_for('users.profile') }}">
+                            Profile ({{ session['user'] }})
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('users.logout') }}">
+                            Logout
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'users.login' %}active{% endif %}"
+                           href="{{ url_for('users.login') }}">
+                            Login
+                        </a>
+                    </li>
+                {% endif %}
+
             </ul>
         </div>
     </div>
