--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,18 @@
 <body>
 
     {% include 'partials/nav.html' %}
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <div class="container mt-3">
+      {% for category, msg in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+          {{ msg }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
+{% endwith %}
 
     {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
