--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -5,6 +5,6 @@
   <h1 class="display-4 text-danger">404</h1>
   <h2>Oops! Page Not Found</h2>
   <p class="lead">Sorry, the page you are looking for does not exist.</p>
-  <a href="{{ url_for('home') }}" class="btn btn-primary mt-3">Back to Home</a>
+  <a href="{{ url_for('posts.all_posts') }}" class="btn btn-primary mt-3">Back to Posts</a>
 </div>
 {% endblock %}
