--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,21 @@
 </head>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">Flask Blog</a>
+
+    <div class="navbar-nav ms-auto">
+      {% if current_user.is_authenticated %}
+        <a class="nav-link" href="{{ url_for('auth.account') }}">Account</a>
+        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+      {% else %}
+        <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+        <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+      {% endif %}
+    </div>
+  </div>
+</nav>
   {% with msgs = get_flashed_messages(with_categories=true) %}
     {% if msgs %}
       <div class="container mt-3">
